# partners-openapi/openapi/partners/account.yaml
@@ -1,7 +1,7 @@
 openapi: "3.0.3"
 info:
   title: Request for partners account
-  version: 1.0.9
+  version: 1.0.12
   description: OpenAPI Specification for partners account
 
 servers:
@@ -237,6 +237,35 @@ paths:
                   $ref: 'model/accounts/account_with_partner_response.json'
                 }
                 minimum: 1
+        404:
+          description: Not Found
+        400:
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: 'model/common/error.json'
+
+  /partner/account/get-at-all-requisites:
+    post:
+      tags:
+        - Partner Accounts
+      description: Получение информации по счету и партнеру из анализа всех реквизитов запроса
+      operationId: getAtAllRequisites
+      requestBody:
+        description: Счёта
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: 'model/accounts/account_and_partner_request.json'
+      responses:
+        200:
+          description: Успешный ответ
+          content:
+            application/json:
+              schema:
+                $ref: 'model/accounts/account_with_partner_response.json'
         404:
           description: Not Found
         400:
